@@ -86,6 +86,7 @@ class FOREACH_PARENT: pass
 class FOREACH_SERVICE: pass
 class REMAINING: pass
 class DISABLED: pass
+class HARD_STATES: pass
 
 # Has to be declared here once since the functions can be assigned in
 # bi.py and also in multisite.mk. "Double" declarations are no problem
