@@ -320,6 +320,7 @@
     * 0720 FIX: Fix timeperiod computation with CMC and flexible notifications...
 
     BI:
+    * 0721 Use hard states in BI aggregates...
     * 0669 FIX: Fixed regex matching in BI when using character groups [...]...
 
     Reporting & Availability:
